<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_map"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/title_map" />
    <item
        android:id="@+id/navigation_quests"
        android:icon="@android:drawable/btn_star"
        android:title="@string/title_quests" />
    <item
        android:id="@+id/navigation_assistant"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/title_assistant" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/title_profile" />
    <item
        android:id="@+id/navigation_shop"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/title_shop" />
</menu>